# hokeypokey

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  hokeypokey.example.toml  pyproject.toml  sonar-project.properties
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml  typecheck.yml
.state/: PLAN.md
analysis/: comprehensive_audit_20260317.md
src/hokeypokey/: __init__.py  __main__.py  app.py  cache.py  cli.py  config.py  models.py  orchestrator.py  resolver.py  search.py
src/hokeypokey/hkp/: __init__.py  formatter.py  routes.py
src/hokeypokey/sources/: __init__.py  base.py  github.py  ldap.py
tests/: conftest.py  test_app.py  test_cache.py  test_config.py  test_hkp_formatter.py  test_hkp_routes.py  test_integration.py  test_orchestrator.py  test_resolver.py  test_search.py  test_source_github.py  test_source_ldap.py
