[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hokeypokey"
version = "0.1.0"
description = "A read-only HKP/HKPS keyserver that federates GPG keys from pluggable upstream sources"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "quart>=0.19",
    "hypercorn>=0.17",
    "ldap3>=2.9",
    "httpx>=0.27",
    "pgpy>=0.6",
    "python-dotenv>=1.0",
]

[project.scripts]
hokeypokey = "hokeypokey.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hokeypokey"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["hokeypokey"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["pgpy", "pgpy.*", "ldap3", "ldap3.*"]
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
